--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -6,12 +6,6 @@
     align-items: center;
     margin-bottom: 10px;
 
-    .logo-container{
-        height: 100%;
-        width: 70px;
-        padding: 25px;
-    }
-
     .options{
         width: 50%;
         height: 100%;
@@ -22,6 +16,7 @@
         .option{
             padding: 10px 15px;
             font-size: 20px;
+            cursor: pointer;
         }
     }
 }
