--- a/src/pages/SignInAndSignUp/SignInAndSignUp.scss
+++ b/src/pages/SignInAndSignUp/SignInAndSignUp.scss
@@ -1,8 +1,14 @@
 .sign-in-and-sign-up {
-    width: 850px;
+    width: 1000px;
     display: flex;
     justify-content: space-between;
     margin: 30px auto;
+  }
+
+  @media(max-width: 668px){
+      .sign-in-and-sign-up {
+        flex-direction: column;
+      }
   }
   
   
